--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["image", "resize", "rotate"],
     "require": {
         "php": ">=5.3.0",
-        "symfony/filesystem": "3.0.*@dev"
+        "symfony/filesystem": "~3.0"
     },
     "homepage": "https://github.com/masterexploder/PHPThumb",
     "authors": [
