--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "description": "A library for manipulating images in PHP.",
     "keywords": ["image", "resize", "rotate"],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/filesystem": "3.0.*@dev"
+        "php": ">=5.3.0"
     },
     "homepage": "https://github.com/masterexploder/PHPThumb",
     "authors": [
