--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "description": "A library for manipulating images in PHP.",
     "keywords": ["image", "resize", "rotate"],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "symfony/filesystem": "2.6.6"
     },
     "homepage": "https://github.com/masterexploder/PHPThumb",
     "authors": [
